# 3D-pet-agent

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  spec.md
.github/workflows/: ci.yml
configs/: control.yaml  models.yaml  navigation.yaml  prompts.txt  runtime.yaml  thresholds.yaml
docs/: architecture.md  eval.md  review.md  spec-ref.md  spec.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  style.css
samples/: desk_scene_demo.json  eval_dataset.jsonl  pet_actions.jsonl
scripts/: build_eval_dataset.py
src/: __init__.py  cli.py  config.py
src/camera_service/: __init__.py  image_reader.py  video_reader.py  webcam.py
src/control/: __init__.py  car_follower.py  car_model.py  kinematic.py  path_follower.py  pid.py  pure_pursuit.py  reeds_shepp.py
src/evaluation/: __init__.py  metrics.py  report.py  runner.py  (+1 more)
tests/: conftest.py  factories.py  test_astar.py  test_bytetrack_acceptance.py  test_bytetrack_adapter.py  test_car_command.py  test_car_follower.py  test_cli.py  test_command_parser.py  test_config.py  test_continuous_env.py  test_controller_server.py  test_coverage_grid.py  test_dialogue.py  test_editor_server.py  test_evaluation.py  test_exploration_planner.py  test_exploration_server.py  test_frame_packet.py  test_graph_slam_acceptance.py  test_graph_slam_loop_detector.py  test_graph_slam_pose_graph.py  test_graph_slam_pose_source.py  test_grasp_net.py  test_grounding_build_goal.py  test_grounding_resolver.py  test_kinematic.py  test_llm_dialogue_acceptance.py  test_llm_grounding.py  test_llm_grounding_wiring.py  test_llm_parser.py  test_manipulation.py  test_metric_map.py  test_object_lifter.py  test_occupancy_grid.py  test_ollama_client.py  test_ollama_parser.py  test_path_follower.py  test_perception_loop.py  test_perception_schema.py  (+20 more)
(+71 files in other folders)
