[project]
name = "pet-agent"
version = "0.1.0"
description = "3D Pet Agent: language-grounded 3D virtual pet with open-vocabulary perception"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    # Backend service
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    # Vision and ML
    "torch>=2.4",
    "torchvision>=0.19",
    "transformers>=4.46",
    "accelerate>=1.0",
    "timm>=1.0",
    "huggingface-hub>=0.26",
    "opencv-python>=4.10",
    "pillow>=10.4",
    "numpy>=1.26,<2.2",
    # <0.30: supervision deprecates ByteTrack in 0.28 and removes it in 0.30;
    # migrate ByteTrackTracker to the `trackers` package before lifting this cap
    # (spec §14.6.1).
    "supervision>=0.24,<0.30",
    "scipy>=1.13",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
track = [
    # supervision is already a core dep; this extra signals "tracking opt-in".
    "supervision>=0.25,<0.30",
]
rl = [
    "gymnasium>=1.0",
    "stable-baselines3>=2.7",
    "sb3-contrib>=2.7",
]
slam = [
    "pypose>=0.9",
]
llm = [
    "ollama>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Default suite stays hermetic: live tests (real Ollama) are opt-in via `-m live`.
addopts = ["-m", "not live"]
markers = [
    "live: hits a real local service (e.g. Ollama); deselected by default, opt in with -m live",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
